--- a/charts/vela-core/templates/defwithtemplate/webservice.yaml
+++ b/charts/vela-core/templates/defwithtemplate/webservice.yaml
@@ -18,11 +18,15 @@ spec:
         spec: {
           replicas: 1
       
+          selector: matchLabels: {
+            "app.oam.dev/component": context.name
+          }
+      
           template: {
-            metadata:
-              labels:
-                "component.oam.dev/name": context.name
-                
+            metadata: labels: {
+              "app.oam.dev/component": context.name
+            }
+      
             spec: {
               containers: [{
                 name:  context.name
@@ -36,10 +40,6 @@ spec:
               }]
             }
           }
-      
-          selector: 
-            matchLabels:
-              "component.oam.dev/name": context.name
         }
       }
       parameter: {
