--- a/charts/vela-core/templates/defwithtemplate/worker.yaml
+++ b/charts/vela-core/templates/defwithtemplate/worker.yaml
@@ -18,11 +18,15 @@ spec:
           name: context.name
         spec: {
           replicas: 1
+          
+          selector: matchLabels: {
+            "app.oam.dev/component": context.name
+          }
       
           template: {
-            metadata:
-              labels:
-                "component.oam.dev/name": context.name
+            metadata: labels: {
+              "app.oam.dev/component": context.name
+            }
                 
             spec: {
               containers: [{
@@ -34,7 +38,7 @@ spec:
       
           selector: 
             matchLabels:
-              "component.oam.dev/name": context.name
+              "app.oam.dev/component": context.name
         }
       }
       
