--- a/charts/vela-core/templates/defwithtemplate/task.yaml
+++ b/charts/vela-core/templates/defwithtemplate/task.yaml
@@ -18,12 +18,12 @@ spec:
         spec: {
           parallelism: parameter.count
           completions: parameter.count
-          template:
-            spec:
-              containers: [{
-                name:  context.name
-                image: parameter.image
-              }]
+          template: spec: {
+            containers: [{
+              name:  context.name
+              image: parameter.image
+            }]
+          }
         }
       }
       parameter: {
