change podspec workload to deployment in built-in templates (#458)
* change podspec workload to deployment in built-in templates

* fix

Signed-off-by: Hongchao Deng <hongchaodeng1@gmail.com>

--- a/charts/vela-core/templates/defwithtemplate/worker.yaml
+++ b/charts/vela-core/templates/defwithtemplate/worker.yaml
@@ -3,30 +3,42 @@ kind: WorkloadDefinition
 metadata:
   name: backend
   annotations:
-    definition.oam.dev/apiVersion: "standard.oam.dev/v1alpha1"
-    definition.oam.dev/kind: "PodSpecWorkload"
+    definition.oam.dev/apiVersion: "apps/v1"
+    definition.oam.dev/kind: "Deployment"
     definition.oam.dev/description: "Backend worker without ports exposed"
 spec:
   definitionRef:
-    name: podspecworkloads.standard.oam.dev
-  childResourceKinds:
-    - apiVersion: apps/v1
-      kind: Deployment
+    name: deployments.apps
   extension:
     template: |
       output: {
-        apiVersion: "standard.oam.dev/v1alpha1"
-        kind:       "PodSpecWorkload"
+        apiVersion: "apps/v1"
+        kind:       "Deployment"
         metadata:
           name: context.name
         spec: {
           replicas: 1
-          podSpec: {
-            containers: [{
-              image: parameter.image
-              name:  context.name
-            }]
+          
+          selector: matchLabels: {
+            "app.oam.dev/component": context.name
           }
+      
+          template: {
+            metadata: labels: {
+              "app.oam.dev/component": context.name
+            }
+                
+            spec: {
+              containers: [{
+                name:  context.name
+                image: parameter.image
+              }]
+            }
+          }
+      
+          selector: 
+            matchLabels:
+              "app.oam.dev/component": context.name
         }
       }
       
