--- a/charts/vela-core/templates/defwithtemplate/webservice.yaml
+++ b/charts/vela-core/templates/defwithtemplate/webservice.yaml
@@ -3,36 +3,42 @@ kind: WorkloadDefinition
 metadata:
   name: webservice
   annotations:
-    definition.oam.dev/apiVersion: "standard.oam.dev/v1alpha1"
-    definition.oam.dev/kind: "PodSpecWorkload"
+    definition.oam.dev/apiVersion: "apps/v1"
+    definition.oam.dev/kind: "Deployment"
     definition.oam.dev/description: "Long running service with network routes"
 spec:
   definitionRef:
-    name: podspecworkloads.standard.oam.dev
-  childResourceKinds:
-    - apiVersion: apps/v1
-      kind: Deployment
-    - apiVersion: v1
-      kind: Service
+    name: deployments.apps
   extension:
     template: |
       output: {
-        apiVersion: "standard.oam.dev/v1alpha1"
-        kind:       "PodSpecWorkload"
+        apiVersion: "apps/v1"
+        kind:       "Deployment"
         metadata: name: context.name
         spec: {
           replicas: 1
-          podSpec: {
-            containers: [{
-              name:  context.name
-              image: parameter.image
-              if parameter["env"] != _|_ {
-                env: parameter.env
-              }
-              ports: [{
-                containerPort: parameter.port
+      
+          selector: matchLabels: {
+            "app.oam.dev/component": context.name
+          }
+      
+          template: {
+            metadata: labels: {
+              "app.oam.dev/component": context.name
+            }
+      
+            spec: {
+              containers: [{
+                name:  context.name
+                image: parameter.image
+                if parameter["env"] != _|_ {
+                  env: parameter.env
+                }
+                ports: [{
+                  containerPort: parameter.port
+                }]
               }]
-            }]
+            }
           }
         }
       }
