fix and clean up charts
currently the charts has following issues:
- cert-manager has manifests in multiple places. Should be combined into one.
  Prefer pure yaml since its helm chart requires `--set installCRDs=true` flag and uninstalling CRD via helm is inconvient.
- The bootstrap of vela-core will setup metrics controller. This requires Prometheus Operator CRD. Move related CRD to vela-core chart.
- move prometheus to vela-system namespace. Remove monitoring namespace.
- remove grafana. It's already a dependency of prometheus chart.
- change default image pull policy to IfNotPresent. Should not be Always.

Signed-off-by: Hongchao Deng <hongchaodeng1@gmail.com>

--- a/charts/vela-core/templates/velaConfig.yaml
+++ b/charts/vela-core/templates/velaConfig.yaml
@@ -4,28 +4,12 @@ metadata:
   name: vela-config
   namespace: {{ .Release.Namespace }}
 data:
-  certificates.cert-manager.io: |
-    {
-      "repo": "jetstack",
-      "urL": "https://charts.jetstack.io",
-      "name": "cert-manager",
-      "namespace": "cert-manager",
-      "version": "1.0.3"
-    }
-  grafana: |
-    {
-      "repo": "grafana",
-      "urL": "https://grafana.github.io/helm-charts",
-      "name": "grafana",
-      "namespace": "monitoring",
-      "version": "6.0.1"
-    }
   servicemonitors.monitoring.coreos.com: |
     {
       "repo": "prometheus-community",
       "urL": "https://prometheus-community.github.io/helm-charts",
       "name": "kube-prometheus-stack",
-      "namespace": "monitoring",
+      "namespace": "vela-system",
       "version": "9.4.4"
     }
   ingresses.networking.k8s.io: |
