--- a/charts/vela-core/values.yaml
+++ b/charts/vela-core/values.yaml
@@ -7,7 +7,7 @@ useWebhook: true
 image:
   repository: oamdev/vela-core
   tag: latest
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
 imagePullSecrets: []
 nameOverride: ""
