Add appfile tutorial and fix code
includes:
- fix up command to save appfile to env dir
- update cue template to include cmd and config
- move design to doc/design

--- a/charts/vela-core/templates/defwithtemplate/task.yaml
+++ b/charts/vela-core/templates/defwithtemplate/task.yaml
@@ -22,6 +22,11 @@ spec:
             containers: [{
               name:  context.name
               image: parameter.image
+      
+              if parameter["cmd"] != _|_ {
+                command: parameter.cmd
+              }
+              command:
             }]
           }
         }
@@ -34,5 +39,7 @@ spec:
         // +usage=specify app image
         // +short=i
         image: string
+      
+        cmd?: [...string]
       }
       
