--- a/charts/vela-core/templates/defwithtemplate/webservice.yaml
+++ b/charts/vela-core/templates/defwithtemplate/webservice.yaml
@@ -31,9 +31,24 @@ spec:
               containers: [{
                 name:  context.name
                 image: parameter.image
+      
+                if parameter["cmd"] != _|_ {
+                  command: parameter.cmd
+                }
+      
                 if parameter["env"] != _|_ {
                   env: parameter.env
                 }
+                
+                if context["config"] != _|_ {
+                  env: [
+                    for k, v in context.config {
+                      name: k
+                      value: v
+                    }
+                  ]
+                }
+      
                 ports: [{
                   containerPort: parameter.port
                 }]
@@ -46,6 +61,8 @@ spec:
         // +usage=specify app image
         // +short=i
         image: string
+      
+        cmd?: [...string]
       
         // +usage=specify port for container
         // +short=p
