--- a/charts/vela-core/templates/defwithtemplate/worker.yaml
+++ b/charts/vela-core/templates/defwithtemplate/worker.yaml
@@ -32,6 +32,10 @@ spec:
               containers: [{
                 name:  context.name
                 image: parameter.image
+      
+                if parameter["cmd"] != _|_ {
+                  command: parameter.cmd
+                }
               }]
             }
           }
@@ -46,5 +50,7 @@ spec:
         // +usage=specify app image
         // +short=i
         image: string
+      
+        cmd?: [...string]
       }
       
