--- a/examples/kubecondemo/charts/crossplane/Chart.yaml
+++ b/examples/kubecondemo/charts/crossplane/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: 0.14.0-rc.18.g99c02be
+appVersion: 0.13.0
 description: Crossplane is an open source Kubernetes add-on that extends any cluster
   with the ability to provision and manage cloud infrastructure, services, and applications
   using kubectl, GitOps, or any tool that works with the Kubernetes API.
@@ -33,4 +33,4 @@ maintainers:
 - email: info@crossplane.io
   name: Crossplane Maintainers
 name: crossplane
-version: 0.14.0-rc.18.g99c02be
+version: 0.13.0
