update manualscale cue to set default replica 1 and update appfile example to exclude scaler trait

--- a/examples/testapp/vela.yaml
+++ b/examples/testapp/vela.yaml
@@ -21,8 +21,8 @@ services:
     cmd: ["node", "server.js"]
     port: 8080
 
-    scaler:
-      replica: 1
+    # scaler:
+    #   replica: 1
 
     # route:
     #   domain: example.com
