start promethus instance on installation
Signed-off-by: 天元 <jianbo.sjb@alibaba-inc.com>

--- a/e2e/raw-objects/samples/metrics-demo/prometheus/prometheus-oam.yaml
+++ b/e2e/raw-objects/samples/metrics-demo/prometheus/prometheus-oam.yaml
@@ -22,7 +22,7 @@ spec:
   serviceAccountName: kube-prometheus-stack-prometheus
   serviceMonitorNamespaceSelector:
     matchLabels:
-      mornitoring: oam
+      app.kubernetes.io/part-of: kubevela
   serviceMonitorSelector:
     matchLabels:
       k8s-app: oam
