Add Autoscaler docs and support cli and appfile
added Autoscaler docs and add spec.extension.template
for cli and appfile

--- a/hack/vela-templates/definitions/autoscale.yaml
+++ b/hack/vela-templates/definitions/autoscale.yaml
@@ -1,15 +1,19 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: TraitDefinition
 metadata:
-  name: autoscalers.standard.oam.dev
+  name: autoscale
   annotations:
     definition.oam.dev/apiVersion: standard.oam.dev/v1alpha1
     definition.oam.dev/kind: Autoscaler
+    definition.oam.dev/description: "Automatically scale workloads by cron or resource utilization"
 spec:
   appliesToWorkloads:
     - webservice
     - backend
     - deployments.apps
+    - podspecworkload
   workloadRefPath: spec.workloadRef
   definitionRef:
     name: autoscalers.standard.oam.dev
+  extension:
+    template: |
