--- a/charts/vela-core/templates/velaConfig.yaml
+++ b/charts/vela-core/templates/velaConfig.yaml
@@ -20,3 +20,11 @@ data:
       "namespace": "vela-system",
       "version": "1.2.0"
     }
+  keda: |
+    {
+      "repo": "kedacore",
+      "urL": "https://kedacore.github.io/charts",
+      "name": "keda",
+      "namespace": "keda",
+      "version": "2.0.0-beta1.2"
+    }
