doc: add app init, config, and capability references
additionally:

- change backend workload type to worker
- add cue format script

Signed-off-by: Hongchao Deng <hongchaodeng1@gmail.com>

--- a/charts/vela-core/templates/defwithtemplate/worker.yaml
+++ b/charts/vela-core/templates/defwithtemplate/worker.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: WorkloadDefinition
 metadata:
-  name: backend
+  name: worker
   annotations:
     definition.oam.dev/apiVersion: "apps/v1"
     definition.oam.dev/kind: "Deployment"
@@ -12,45 +12,45 @@ spec:
   extension:
     template: |
       output: {
-        apiVersion: "apps/v1"
-        kind:       "Deployment"
-        metadata:
-          name: context.name
-        spec: {
-          replicas: 1
-          
-          selector: matchLabels: {
-            "app.oam.dev/component": context.name
-          }
+      	apiVersion: "apps/v1"
+      	kind:       "Deployment"
+      	metadata:
+      		name: context.name
+      	spec: {
+      		replicas: 1
       
-          template: {
-            metadata: labels: {
-              "app.oam.dev/component": context.name
-            }
-                
-            spec: {
-              containers: [{
-                name:  context.name
-                image: parameter.image
+      		selector: matchLabels: {
+      			"app.oam.dev/component": context.name
+      		}
       
-                if parameter["cmd"] != _|_ {
-                  command: parameter.cmd
-                }
-              }]
-            }
-          }
+      		template: {
+      			metadata: labels: {
+      				"app.oam.dev/component": context.name
+      			}
       
-          selector: 
-            matchLabels:
-              "app.oam.dev/component": context.name
-        }
+      			spec: {
+      				containers: [{
+      					name:  context.name
+      					image: parameter.image
+      
+      					if parameter["cmd"] != _|_ {
+      						command: parameter.cmd
+      					}
+      				}]
+      			}
+      		}
+      
+      		selector:
+      			matchLabels:
+      				"app.oam.dev/component": context.name
+      	}
       }
       
       parameter: {
-        // +usage=specify app image
-        // +short=i
-        image: string
+      	// +usage=specify app image
+      	// +short=i
+      	image: string
       
-        cmd?: [...string]
+      	cmd?: [...string]
       }
       
