--- a/hack/vela-templates/definitions/worker.yaml
+++ b/hack/vela-templates/definitions/worker.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: WorkloadDefinition
 metadata:
-  name: backend
+  name: worker
   annotations:
     definition.oam.dev/apiVersion: "apps/v1"
     definition.oam.dev/kind: "Deployment"
