Wrongly rebased newly merged requests from comments, fixed it.
co-authored-by: 天元 <jianbo.sjb@alibaba-inc.com>

--- a/charts/vela-core/templates/defwithtemplate/autoscale.yaml
+++ b/charts/vela-core/templates/defwithtemplate/autoscale.yaml
@@ -16,14 +16,14 @@ spec:
   definitionRef:
     name: autoscalers.standard.oam.dev
   extension:
-    template: |-
+    template: |
       output: {
           apiVersion: "standard.oam.dev/v1alpha1"
           kind:       "Autoscaler"
           spec: {
               minReplicas: parameter.minReplicas
               maxReplicas: parameter.maxReplicas
-              triggers: [...{
+              triggers: [{
                   name: parameter.name
                   type: parameter.type
                   condition: {
@@ -33,18 +33,17 @@ spec:
                       replicas: parameter.replicas
                       timezone: parameter.timezone
                   }
-              }]
+              }, ...]
           }
         }
-        parameter: {
-          minReplicas: *1 | int
-          maxReplicas: *4 | int
-          name:        *"" | string
-          type:        *"cron" | string
-          startAt:     *"00:01" | string
-          duration:    *"" | string
-          days:        *"Monday, Tuesday" | string
-          replicas:    *"2" | string
-          timezone:    *"Asia/Shanghai" | string
-        }
-      
+      parameter: {
+      	minReplicas: *1 | int
+      	maxReplicas: *4 | int
+      	name:        *"" | string
+      	type:        *"cron" | string
+      	startAt:     string
+      	duration:    string
+      	days:        string
+      	replicas:    *"2" | string
+      	timezone:    *"Asia/Shanghai" | string
+      }
