Autoscaler for appfile
completed spec.extension.template to support autoscale in
cli and appfile

--- a/charts/vela-core/templates/defwithtemplate/autoscale.yaml
+++ b/charts/vela-core/templates/defwithtemplate/autoscale.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     definition.oam.dev/apiVersion: standard.oam.dev/v1alpha1
     definition.oam.dev/kind: Autoscaler
-    definition.oam.dev/description: "Automatically scale workloads by cron or resource utilization"
+    definition.oam.dev/description: "Automatically scale workloads"
 spec:
   appliesToWorkloads:
     - webservice
@@ -18,32 +18,56 @@ spec:
   extension:
     template: |
       output: {
-          apiVersion: "standard.oam.dev/v1alpha1"
-          kind:       "Autoscaler"
-          spec: {
-              minReplicas: parameter.minReplicas
-              maxReplicas: parameter.maxReplicas
-              triggers: [{
-                  name: parameter.name
-                  type: parameter.type
-                  condition: {
-                      startAt:  parameter.startAt
-                      duration: parameter.duration
-                      days:     parameter.days
-                      replicas: parameter.replicas
-                      timezone: parameter.timezone
-                  }
-              }, ...]
-          }
-        }
-      parameter: {
-      	minReplicas: *1 | int
-      	maxReplicas: *4 | int
-      	name:        *"" | string
-      	type:        *"cron" | string
-      	startAt:     string
-      	duration:    string
-      	days:        string
-      	replicas:    *"2" | string
-      	timezone:    *"Asia/Shanghai" | string
+      	apiVersion: "standard.oam.dev/v1alpha1"
+      	kind:       "Autoscaler"
+      	spec: {
+      		minReplicas: parameter.min
+      		maxReplicas: parameter.max
+      		if parameter["cpu"] != _|_ && parameter["cron"] != _|_ {
+      			triggers: [cpuScaler, cronScaler]
+      		}
+      		if parameter["cpu"] != _|_ && parameter["cron"] == _|_ {
+      			triggers: [cpuScaler]
+      		}
+      		if parameter["cpu"] == _|_ && parameter["cron"] != _|_ {
+      			triggers: [cronScaler]
+      		}
+      	}
       }
+      
+      cpuScaler: {
+      	type: "cpu"
+      	condition: {
+      		type: "Utilization"
+      		if parameter["cpu"] != _|_ {
+      			value: parameter.cpu
+      		}
+      	}
+      }
+      
+      cronScaler: {
+      	type: "cron"
+      	if parameter["cron"] != _|_ {
+      		condition: parameter.cron
+      	}
+      }
+      
+      parameter: {
+      	// +usage=minimal replicas of the workload
+      	min: int
+      	// +usage=maximal replicas of the workload
+      	max: int
+      	// +usage=specify the value for CPU utilization, like 80, which means 80%
+      	cpu?: string
+      	// +usage=just for `appfile`, not available for Cli usage
+      	cron?: {
+      		startAt:  string
+      		duration: string
+      		// +usage=several workdays or weekends, like "Monday, Tuesday"
+      		days:     string
+      		replicas: string
+      		// +usage=timezone, like "America/Seattle"
+      		timezone: string
+      	}
+      }
+      
