--- a/charts/vela-core/templates/defwithtemplate/webservice.yaml
+++ b/charts/vela-core/templates/defwithtemplate/webservice.yaml
@@ -52,8 +52,15 @@ spec:
       					ports: [{
       						containerPort: parameter.port
       					}]
+      
+      					resources: {
+      						limits:
+      							cpu: parameter.CPULimits
+      						requests:
+      							cpu: parameter.CPURequests
+      					}
       				}]
-      			}
+      		}
       		}
       	}
       }
@@ -78,5 +85,9 @@ spec:
       			}
       		}
       	}]
+      	// +usage=CPU core limits for the workload
+      	CPULimits?: *"1" | string
+      	// +usage=CPU core requests for the workload
+      	CPURequests?: *"0.1" | string
       }
       
