--- a/hack/vela-templates/definitions/autoscale.yaml
+++ b/hack/vela-templates/definitions/autoscale.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     definition.oam.dev/apiVersion: standard.oam.dev/v1alpha1
     definition.oam.dev/kind: Autoscaler
-    definition.oam.dev/description: "Automatically scale workloads by cron or resource utilization"
+    definition.oam.dev/description: "Automatically scale workloads"
 spec:
   appliesToWorkloads:
     - webservice
