support rollout trait
Signed-off-by: 天元 <jianbo.sjb@alibaba-inc.com>

--- a/charts/vela-core/templates/velaConfig.yaml
+++ b/charts/vela-core/templates/velaConfig.yaml
@@ -14,11 +14,11 @@ data:
     }
   flagger.app: |
     {
-      "repo": "flagger",
-      "urL": "https://flagger.app",
+      "repo": "oam-flagger",
+      "urL": "https://oam.dev/flagger/archives/",
       "name": "flagger",
       "namespace": "vela-system",
-      "version": "1.2.0"
+      "version": "1.1.0"
     }
   keda: |
     {
