Autoscaler for appfile (#510)
* Autoscaler for appfile

completed spec.extension.template to support autoscale in
cli and appfile

* add alias name  to cpuRequest in Cli for deploying webservice

--- a/charts/vela-core/templates/defwithtemplate/webservice.yaml
+++ b/charts/vela-core/templates/defwithtemplate/webservice.yaml
@@ -49,8 +49,17 @@ spec:
       					ports: [{
       						containerPort: parameter.port
       					}]
+      
+      					if parameter["cpuRequests"] != _|_ {
+      						resources: {
+      							limits:
+      								cpu: parameter.cpuRequests
+      							requests:
+      								cpu: parameter.cpuRequests
+      						}
+      					}
       				}]
-      			}
+      		}
       		}
       	}
       }
@@ -75,5 +84,8 @@ spec:
       			}
       		}
       	}]
+      	// +usage=CPU core requests for the workload
+      	// +alias=cpu-requests
+      	cpuRequests?: string
       }
       
