--- a/examples/testapp/vela.yaml
+++ b/examples/testapp/vela.yaml
@@ -37,8 +37,8 @@ services:
     #   enabled: true
 
 #    autoscale:
-#      minReplicas: 1
-#      maxReplicas: 4
+#      min: 1
+#      max: 4
 #      cron:
 #        startAt:  "14:00"
 #        duration: "2h"
